* Added `qs` nunjucks filter, which builds query strings from objects * Added `allowed` option to areas, which limits the item types that will actually be displayed (see `controls` for how to limit what can be added in the editor). You can use a more restrictive `allowed` option to avoid displaying inappropriate widgets in excerpts. Note that rich text must be explicitly included in the list as `richText` or it will not be shown * Added `aposAreaPlaintext` template helper, which returns a plaintext representation of an area. Note this is true plaintext, so you must escape it with the `e` filter to safely display it as part of HTML. Includes only item types that actually have an appropriate plaintext representation, which currently means richText only, although you can define a getPlaintext method for any item type (such as a widget). Includes a `truncate` option which limits the character count, avoiding word breaks if possible. The truncated text ends with a Unicode ellipsis character * Added `apos.areaFindFile`, `apos.areaPlaintext` and `apos.truncatePlaintext` for direct access to the above functionality when not going through nunjucks * Added `self.htmlToPlaintext`, part of the `aposAreaPlaintext` implementation which is likely to be useful separately * Refactored `apos.partial` so that `apos.getNunjucksEnv` is broken out separately

--- a/public/css/content.less
+++ b/public/css/content.less
@@ -651,9 +651,17 @@ They will need to live somewhere else eventually
       float: right;
       margin-right: 12px;
     }
-
   }
-
 }
 
-
+.apos-hires-password
+{
+  p
+  {
+    margin-top: 20px;
+  }
+  a
+  {
+    color: #48f;
+  }
+}
